--- a/app/src/organisms/navBar/navBar.css
+++ b/app/src/organisms/navBar/navBar.css
@@ -1,13 +1,9 @@
 .logo {
   width: 15%;
   height: 15%;
-  /* filter: drop-shadow(1px 1px 1px rgb(255, 255, 127.5)); */
 }
 
 .logo:hover {
-  /* -webkit-filter: hue-rotate(360deg) saturate(5);
-  filter: hue-rotate(360deg) saturate(5); */
-  /* fill: red; */
   filter: brightness(0.5);
 }
 
@@ -15,11 +11,9 @@
   display: flex;
   width: 100%;
   height: 70px;
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  z-index: 1;
+  position: sticky;
+  /* top: 0;
+  left: 0; */
 
   /* justify-content: space-between; */
   align-items: center;
@@ -36,6 +30,7 @@ p {
 .navbar-wrapper {
   display: flex;
   width: 100%;
+  /* position: sticky; */
 
   /* align-items: center; */
   justify-content: space-between;
