--- a/app/src/pages/chatPage/styles.module.css
+++ b/app/src/pages/chatPage/styles.module.css
@@ -1,22 +1,38 @@
 /* client/src/pages/chat/styles.module.css */
-
+/*
+color palette:
+F9F6F2 - white
+FCF186 - light yellow
+F0AF01 - orange
+1C3103 - dark green
+9CAA64 - green
+435711 - light green
+404040 - gray
+191919 - black
+B13C3F - red
+*/
 .chatContainer {
     max-width: 1100px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 4fr;
     gap: 20px;
+    background-color: #9CAA64;
+    font-family: "Poppins";
+    color: #F9F6F2;
   }
   
   /* Room and users component */
   .roomAndUsersColumn {
+    
     border-right: 1px solid #dfdfdf;
+    
   }
   .roomTitle {
     margin-bottom: 60px;
     text-transform: uppercase;
     font-size: 2rem;
-    color: #fff;
+    color: #1C3103;
   }
   .usersTitle {
     font-size: 1.2rem;
@@ -39,7 +55,7 @@
     padding: 10px 10px 10px 40px;
   }
   .message {
-    background: rgb(0, 24, 111);
+    background: #435711;
     border-radius: 6px;
     margin-bottom: 24px;
     max-width: 600px;
@@ -62,6 +78,27 @@
     margin-right: 16px;
     width: 60%;
     border-radius: 6px;
-    border: 1px solid rgb(153, 217, 234);
+    height:40%;
+    border: 1px solid #F9F6F2;
     font-size: 0.9rem;
+  }
+  .btnoutline{
+    text-align: center;
+    margin-left:60px;
+    padding:10px;
+    font-family: "Poppins";
+    font-size: 20px;
+    color: #F9F6F2;
+    border: 1px solid #F9F6F2;
+    border-radius: 20;
+  }
+  .btnprimary{
+    text-align: center;
+    margin-left:60px;
+    padding:10px;
+    font-family: "Poppins";
+    font-size: 20px;
+    color: #F9F6F2;
+    border: 1px solid #F9F6F2;
+    border-radius: 20;
   }
