--- a/app/src/molecules/userProfileModal/userProfileModal.css
+++ b/app/src/molecules/userProfileModal/userProfileModal.css
@@ -155,6 +155,46 @@ Modal {
     /* column-gap: 10px; */
   }
 
+  .userProfileModal_detail.changePhoto{
+    flex-direction: column;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+  }
+
+.userProfileCenter{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+  .userProfile_Container_left_photomodal{
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    overflow: hidden;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  img.userPhotoModal{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .upload-button{
+    background-color: transparent;
+    color: var(--color-light-accent-green);
+    border: none;
+    cursor: pointer;
+    width: 100%;
+
+    margin-top: 20px;
+  }
+
   .small.userProfileModal_text{
     text-align: left;
     width: 200px;
