--- a/app/src/organisms/listing_details/submit_rating_review_sect.css
+++ b/app/src/organisms/listing_details/submit_rating_review_sect.css
@@ -1,3 +1,9 @@
+.write-review-header {
+  color: #1C3103;
+  font-weight: bold; 
+  margin-left: 25px;
+}
+
 .comment-star-container {
   background: #f9f6f2;
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.25);
