--- a/app/src/pages/chatPage/styles.module.css
+++ b/app/src/pages/chatPage/styles.module.css
@@ -12,7 +12,7 @@ F0AF01 - orange
 B13C3F - red
 */
 .chatContainer {
-    max-width: 1100px;
+    max-width: 1000px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -26,8 +26,8 @@ B13C3F - red
   /* Room and users component */
   .roomAndUsersColumn {
     
-    border-right: 1px solid #dfdfdf;
-    
+    border-right: 2px dashed #dfdfdf;
+    width: 250px;
   }
   .roomTitle {
     padding-top: 30px;
@@ -36,16 +36,19 @@ B13C3F - red
     text-transform: uppercase;
     font-size: 2rem;
     color: #1C3103;
+    text-align: center;
+    font-weight: bold;
   }
   .usersTitle {
     font-size: 1.2rem;
+    padding-left: 20px;
     color: #fff;
   }
   .usersList {
     list-style-type: none;
-    padding-left: 0;
+    padding-left: 40px;
     margin-bottom: 60px;
-    color: rgb(153, 217, 234);
+    color: #FCF186;
   }
   .usersList li {
     margin-bottom: 12px;
@@ -65,7 +68,7 @@ B13C3F - red
     padding: 12px;
   }
   .msgMeta {
-    color: #1C3103;
+    color: #9CAA64;
     font-size: 0.75rem;
   }
   .msgText {
@@ -87,7 +90,7 @@ B13C3F - red
   }
   .btnoutline{
     text-align: center;
-    margin-left:60px;
+    margin-left:80px;
     padding:10px;
     font-family: "Poppins";
     font-size: 20px;
@@ -97,7 +100,7 @@ B13C3F - red
   }
   .btnprimary{
     text-align: center;
-    margin-left:60px;
+    margin-left:20px;
     padding:10px;
     font-family: "Poppins";
     font-size: 20px;
