--- a/app/src/pages/landlord_profile/LandlordProfile.css
+++ b/app/src/pages/landlord_profile/LandlordProfile.css
@@ -66,6 +66,38 @@
   width: 40%;
   height: 100%;
 }
+
+.cardlist-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0px;
+  margin-bottom: 0px !important;
+  padding-top: 0px !important;
+}
+
+.cardlist-list{
+  margin-top: 0px !important;
+}
+
+.loadingContainer{
+  margin-top: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 80%;
+}
+
+.loading{
+  padding-top: -50;
+  max-width: 400px;
+  max-height: 100%;
+}
+
 /* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
@@ -155,9 +187,4 @@ body {
   color: var(--color-primary-black);
 }
 
-.cardlist-flex {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 70px;
-} */
+*/
