--- a/app/src/pages/userProfile/userProfile.css
+++ b/app/src/pages/userProfile/userProfile.css
@@ -17,7 +17,7 @@
   align-items: center;
 
   background-color: var(--color-light-accent-green);
-  width: 30%;
+  width: 25%;
   height: 100%;
 }
 
@@ -102,7 +102,7 @@ img.userPhoto{
   width: 70%;
   height: 100%;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 .header4.userProfile_Title{
