--- a/app/src/atoms/loadingScreenPage/loadingScreenPage.css
+++ b/app/src/atoms/loadingScreenPage/loadingScreenPage.css
@@ -9,6 +9,7 @@
     align-items: center;
     background-color: #F9F6F2;
     transition: opacity 0.75s, visibility 0.75s;
+    z-index: 1;
 }
 
 .loader-hidden { 
