--- a/app/src/molecules/listing_details/review_headers.css
+++ b/app/src/molecules/listing_details/review_headers.css
@@ -6,51 +6,28 @@
 .review-container{
     margin-top: 0px;
     margin-bottom: 40px;
-    display: flex;
-}
-
-.review-header-container{
-    color: #1C3103;
-    font-weight: bold; 
-    width: 25%;
 }
 
 .review-numstar-button{
-    /* background-color: #E6EBD1; */
+    background-color: #E6EBD1;
     /* border-top: 1px solid #1C3103; */
-    /* box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25); */
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    padding: 20px;
 }
 
-.s-add-style, .all {
-    /* margin-left: 55px;
-    margin-right: 40px; */
-    /* margin-left: 15px; */
-    margin-right: 15px;
-    
-    /* margin-top: 10px; */
-    margin-bottom: 10px;
+.s-add-style{
+    margin-top: 30px;
+    margin-bottom: 30px;
     width: 110px;
     height: 50px;
     padding-top:2px;
     padding-bottom: 2px;
     border-radius: 1px;
-    /* border: 1px solid black; */
-    /* background-color: #E6EBD1; */
-    background-color: #9caa64;
-    font-size: 14px;
+    border: 1px solid black;
+    background-color: #E6EBD1;
+    font-size: 16px;
     cursor: pointer;
     border-color: #1C3103;
-    color: var(--color-background);
+    color: #1C3103;
     font-family: var(--font-family-text);
-    border-radius: 23.4px;
 }
-
-/* .all{
-    background-color:  #1C3103;
-    color: white;
-} */
-
-.s-add-style:hover {
-    background-color: #1C3103;
-    color: white;
-  }
